Checkpoint of rough design ideas.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 
   <!-- <link href='https://fonts.googleapis.com/css?family=Inconsolata:400,700' rel='stylesheet' type='text/css'> -->
   <link href='https://fonts.googleapis.com/css?family=Inconsolata:400,700|Poiret+One|Comfortaa:400,700,300|Oxygen+Mono' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+
   <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap-theme.min.css">
   <link rel="stylesheet" href="style/style.css">
@@ -13,19 +15,19 @@
   <nav class="navbar navbar-default navbar-dark">
     <div class="container-fluid">
       <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar" aria-expanded="true" aria-controls="navbar">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="#">mtgibbs.xyz</a>
-          </div>
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar" aria-expanded="true" aria-controls="navbar">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="#">mtgibbs.xyz</a>
+      </div>
       <div id="navbar" class="navbar-collapse collapse">
         <ul class="nav navbar-nav navbar-right">
           <!-- <li><a href="./">Default <span class="sr-only">(current)</span></a></li> -->
-          <li><a href="https://github.com/mtgibbs">GitHub</a></li>
-          <li><a href="https://www.linkedin.com/in/mtgibbs21">LinkedIn</a></li>
+          <li><a href="https://github.com/mtgibbs">GitHub <i class="fa fa-github-square"></i></a></li>
+          <li><a href="https://www.linkedin.com/in/mtgibbs21">LinkedIn <i class="fa fa-linkedin-square"></i></a></li>
         </ul>
       </div>
     </div>
@@ -41,18 +43,36 @@
         </div>
       </div>
     </div>
+
+    <span class="hero-title">Hi.  I'm Matt.</span>
+    <div class="hero-shadow-panel"></div>
   </div>
 
-  <div class="container">
-    <div class="row">
+  <div class="container-fluid">
+    <div class="row info-cells">
       <div class="col-md-4">
-
+        <i class="fa fa-code"></i>
+        <h2>Developer</h2>
+        <p>
+          Bacon ipsum dolor amet jowl biltong pig bresaola flank short ribs beef ribs pork belly pork chop doner frankfurter drumstick. Tail landjaeger rump prosciutto. Turducken ham hock tri-tip frankfurter, ground round andouille sirloin prosciutto doner jerky
+          drumstick swine. Swine drumstick kielbasa sirloin spare ribs strip steak prosciutto leberkas doner corned beef meatloaf cupim kevin. Flank cow leberkas, sausage shoulder kielbasa chuck kevin.
+        </p>
       </div>
       <div class="col-md-4">
-
+        <i class="fa fa-gamepad"></i>
+        <h2>Game Enthusiast</h2>
+        <p>
+          Bacon ipsum dolor amet jowl biltong pig bresaola flank short ribs beef ribs pork belly pork chop doner frankfurter drumstick. Tail landjaeger rump prosciutto. Turducken ham hock tri-tip frankfurter, ground round andouille sirloin prosciutto doner jerky
+          drumstick swine. Swine drumstick kielbasa sirloin spare ribs strip steak prosciutto leberkas doner corned beef meatloaf cupim kevin. Flank cow leberkas, sausage shoulder kielbasa chuck kevin.
+        </p>
       </div>
       <div class="col-md-4">
-
+        <i class="fa fa-question"></i>
+        <h2>TODO</h2>
+        <p>
+          Bacon ipsum dolor amet jowl biltong pig bresaola flank short ribs beef ribs pork belly pork chop doner frankfurter drumstick. Tail landjaeger rump prosciutto. Turducken ham hock tri-tip frankfurter, ground round andouille sirloin prosciutto doner jerky
+          drumstick swine. Swine drumstick kielbasa sirloin spare ribs strip steak prosciutto leberkas doner corned beef meatloaf cupim kevin. Flank cow leberkas, sausage shoulder kielbasa chuck kevin.
+        </p>
       </div>
     </div>
   </div>
