--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 </head>
 
 <body>
-
   <nav class="navbar navbar-default navbar-dark">
     <div class="container-fluid">
       <div class="navbar-header">
@@ -32,24 +31,24 @@
         </ul>
       </div>
     </div>
+
   </nav>
 
+  <div class="jumbotron code-hero">
 
-  <div class="container">
-    <div class="jumbotron code-hero">
-
+    <div class="container">
       <div class="row">
         <div class="col-md-8 col-md-offset-2">
           <code id="typingThing"></code>
         </div>
       </div>
-
-
-      <span class="hero-title">Hi.  I'm Matt.</span>
-      <div class="hero-shadow-panel"></div>
     </div>
 
+    <span class="hero-title">Hi.  I'm Matt.</span>
+    <div class="hero-shadow-panel"></div>
+  </div>
 
+  <div class="container-fluid">
     <div class="row info-cells">
       <div class="col-md-4">
         <i class="fa fa-code"></i>
@@ -77,9 +76,6 @@
       </div>
     </div>
   </div>
-
-
-
 
   <script src="bower_components/jquery/dist/jquery.min.js"></script>
   <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
