--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
     <div class="container">
       <div class="row">
-        <div class="col-md-8 col-md-offset-2">
+        <div class="col-md-12 code-typing-container">
           <code id="typingThing"></code>
         </div>
       </div>
