Fix issue with alignment in lower row

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </div>
 
 
-    <div class="row info-cells">
+    <div class="info-cells">
       <div class="col-md-4">
         <i class="fa fa-code"></i>
         <h2>Developer</h2>
