Changed references to bundles.

--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
   <link href='https://fonts.googleapis.com/css?family=Inconsolata:400,700|Poiret+One|Comfortaa:400,700,300|Oxygen+Mono' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
-  <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
+  <!-- <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap-theme.min.css">
-  <link rel="stylesheet" href="style/style.css">
+  <link rel="stylesheet" href="style/style.css"> -->
+  <link rel="stylesheet" href="/style/style.min.css">
 </head>
 
 <body>
@@ -80,10 +81,11 @@
 
 
 
-  <script src="bower_components/jquery/dist/jquery.min.js"></script>
+  <!-- <script src="bower_components/jquery/dist/jquery.min.js"></script>
   <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
   <script src="bower_components/typed.js/dist/typed.min.js"></script>
-  <script src="main.js"></script>
+  <script src="main.js"></script> -->
+  <script src="/script/script.min.js"></script>
 </body>
 
 </html>
