--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <head>
 
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- <link href='https://fonts.googleapis.com/css?family=Inconsolata:400,700' rel='stylesheet' type='text/css'> -->
   <link href='https://fonts.googleapis.com/css?family=Inconsolata:400,700|Poiret+One|Comfortaa:400,700,300|Oxygen+Mono' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
