--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
     <head>
         <meta charset="UTF-8" />
         <title>Hello React!</title>
+        <link href="/dist/style.css" />
     </head>
     <body>
         <div id="example"></div>
         
-        <!-- Main -->
-        <script src="./dist/bundle.js"></script>
+        <script src="/dist/bundle.js"></script>
     </body>
 </html>
