--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8" />
-        <title>Hello React!</title>
-        <link href="/dist/style.css" />
-    </head>
-    <body>
-        <div id="example"></div>
-        
-        <script src="/dist/bundle.js"></script>
-    </body>
+
+<head>
+    <meta charset="UTF-8" />
+    <title>mtgibbs.xyz</title>
+    <meta name="viewport" , content="width=device-width, initial-scale=1.0" />
+    <link href="/dist/style.css" />
+</head>
+
+<body>
+    <div id="app"></div>
+    <script src="/dist/bundle.js"></script>
+</body>
+
 </html>
