--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8" />
     <title>mtgibbs.xyz</title>
     <meta name="viewport" , content="width=device-width, initial-scale=1.0" />
-    <link href="/dist/style.css" />
+    <link href="https://fonts.googleapis.com/css?family=Poiret+One|Inconsolata:400,700" rel="stylesheet" type="text/css">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="/dist/style.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
