Add meta description tag

--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <meta name="description" content="Matt Gibbs Personal Site">
     <title>mtgibbs.xyz</title>
     <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
